syntax = "proto3";



option csharp_namespace = "GrpcFilmService";


service FilmServiceProto
{
    rpc IncrNotInteresting (FilmIdRequest) returns (IsSuccessResponse);

    rpc DecrNotInteresting (FilmIdRequest) returns (IsSuccessResponse);

    rpc IncrViewsCount (FilmIdRequest) returns (IsSuccessResponse);

    rpc IncrWillWatchCount (FilmIdRequest) returns (IsSuccessResponse);

    rpc DecrWillWatchCount (FilmIdRequest) returns (IsSuccessResponse);

    rpc IncrShareCount (FilmIdRequest) returns (IsSuccessResponse);

    rpc IncrWatchedCount (FilmIdRequest) returns (IsSuccessResponse);

    rpc DecrWatchedCount (FilmIdRequest) returns (IsSuccessResponse);

    rpc Score (ScoreRequest) returns (IsSuccessResponse);
}

message FilmIdRequest
{
    string filmdId = 1;

}

message ScoreRequest
{
    string filmdId = 1;
    double score = 2;

}

message IsSuccessResponse
{
    bool success = 1;
}